Bug 1608931 - Ensure we tick the refresh driver at least once after calling IntersectionObserver.observe. r=mstange

Differential Revision: https://phabricator.services.mozilla.com/D60015